--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,55 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
+    "@cartridge/connector": "^0.6.0",
+    "@cartridge/controller": "^0.6.0",
+    "@dojoengine/core": "1.1.3",
+    "@dojoengine/create-burner": "1.1.3",
+    "@dojoengine/react": "^1.1.3",
+    "@dojoengine/sdk": "1.1.3",
+    "@dojoengine/state": "^1.1.3",
+    "@dojoengine/torii-client": "1.1.3",
+    "@dojoengine/torii-wasm": "1.1.3",
+    "@dojoengine/utils": "1.1.3",
+    "@lucide/lab": "^0.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@starknet-react/core": "^3.5.0",
     "@tailwindcss/vite": "^4.1.8",
+     "@types/uuid": "^10.0.0",
+    "circomlibjs": "^0.1.2",
+    "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.11.17",
+    "graphql": "^16.10.0",
+    "graphql-ws": "^6.0.4",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.5",
+    "recast-detour": "^1.6.3",
+    "semantic-ui-react": "^2.1.5",
+    "starknet": "^6.24.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.8",
+    "use-sound": "^5.0.0",
+    "uuid": "^10.0.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/circomlibjs": "^0.1.6",
+     "@types/node": "^22.13.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+     "autoprefixer": "^10.4.20",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
