--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,12 +16,15 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedSideEffectImports": false,
+    "baseUrl": ".",
+    "paths": {
+    "@/*": ["./src/*"]}
+
   },
   "include": ["src"]
 }
