--- a/contracts/ashwood/Scarb.toml
+++ b/contracts/ashwood/Scarb.toml
@@ -21,3 +21,8 @@ build-external-contracts = ["dojo::world::world_contract::world"]
 [dev-dependencies]
 cairo_test = "=2.9.4"
 dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.4.0" }
+
+
+[profile.sepolia]
+
+[profile.mainnet]
